fixed some bugs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>City info</title>
+    <title>City Scrapper</title>
 </head>
 <body>
   <!-- Banner -->
@@ -27,8 +27,8 @@
     </div>
   </div>
   <!-- City picture -->
-  <div class="header-image"></div>
+  <div id="header-image"></div>
   <!-- JavaScript -->
-  <script src="index.js"></script>
+  <script src="lib/index.js"></script>
 </body>
 </html>
