fixed city picture searcher

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </div>
   </div>
   <!-- City picture -->
-  <div id="header-image"></div>
+  <div id="header-image">
+    
+  </div>
   <!-- JavaScript -->
   <script src="lib/index.js"></script>
 </body>
