added header text

--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
   </div>
   <!-- City card picture -->
   <div id="header-image">
-    <div id='map' style="width: 300px;height: 300px;border-radius: 50%;"></div>
+    <div class="text">
+      <h2 class="city-header">Tokyo, Japan</h2>
+      <h3>Sunday, February 14 2021</h3>
+      <h3>12°C</h3>
+      <h3>Sunny</h3>
+    </div>
     <div class="weather"></div>
   </div>
-  <div class="container">
-  <!-- map -->
+  <div class="general-info">
+    <!-- map -->
+    <div id='map' style="width: 300px;height: 300px;"></div>
   </div>
   <!-- JavaScript -->
   <script src="lib/index.js"></script>
