added card info

--- a/index.html
+++ b/index.html
@@ -39,9 +39,32 @@
     </div>
     <div class="weather"></div>
   </div>
-  <div class="general-info">
-    <!-- map -->
-    <div id='map' style="width: 300px;height: 300px;"></div>
+  <div class="general-info-cards">
+    <!-- General info -->
+    <div class="title"><h5><span>General information</span></h5></div>
+    <!-- Info Card -->
+    <div class="general-info">
+      <div class="card">
+        <img class="card-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Skyscrapers_of_Shinjuku_2009_January.jpg/1920px-Skyscrapers_of_Shinjuku_2009_January.jpg" alt="">
+        <table class="facts">
+          <tr>
+            <td class="fact-title">Name</td>
+            <td class="city-fact">Tokyo</td>
+          </tr>
+          <tr>
+            <td class="fact-title">Country</td>
+            <td class="city-fact">Japan</td>
+          </tr>
+          <tr>
+            <td class="fact-title">Population</td>
+            <td class="city-fact">8336599</td>
+          </tr>
+        </table>
+        <a class="wiki" href="#">Learn more</a>
+      </div>
+      <!-- map -->
+      <div id='map' style="width: 744px;height: 512px;"></div>
+    </div>
   </div>
   <!-- JavaScript -->
   <script src="lib/index.js"></script>
