--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <!-- City card picture -->
   <div id="header-image">
     <div class="text">
-      <h2 class="city-header">Tokyo, Japan</h2>
-      <h3>Sunday, February 14 2021</h3>
-      <h3>12°C</h3>
-      <h3>Sunny</h3>
+      <h2 id="city-header-name"></h2>
+      <h3 id="date-and-time"></h3>
+      <h3 id="temp"></h3>
+      <h3 id="condition"></h3>
     </div>
     <div class="weather"></div>
   </div>
