added miniature image to the info card

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Info Card -->
     <div class="general-info">
       <div class="card">
-        <img class="card-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Skyscrapers_of_Shinjuku_2009_January.jpg/1920px-Skyscrapers_of_Shinjuku_2009_January.jpg" alt="">
+        <div id="card-image"></div>
         <table class="facts">
           <tr>
             <td class="fact-title">Name</td>
