completed facts card and advanced with the news api

--- a/index.html
+++ b/index.html
@@ -49,21 +49,31 @@
         <table class="facts">
           <tr>
             <td class="fact-title">Name</td>
-            <td class="city-fact">Tokyo</td>
+            <td id="city_card_name" class="city-fact"></td>
           </tr>
           <tr>
             <td class="fact-title">Country</td>
-            <td class="city-fact">Japan</td>
+            <td id="city_card_country"class="city-fact"></td>
           </tr>
           <tr>
             <td class="fact-title">Population</td>
-            <td class="city-fact">8336599</td>
+            <td id="city_card_population" class="city-fact"></td>
           </tr>
         </table>
-        <a class="wiki" href="#">Learn more</a>
+        <a id="wiki" class="wiki" href="#">Learn more</a>
       </div>
       <!-- map -->
       <div id='map' style="width: 744px;height: 512px;"></div>
+    </div>
+  </div>
+  <div class="news">
+    <!-- Recent News -->
+    <div class="title"><h5><span>Recent News</span></h5></div>
+    <div class="news-info">
+      <div class="main-news">
+        <img id="main-news-img" src="" alt="">
+      </div>
+      <div class="news-headers"></div>
     </div>
   </div>
   <!-- JavaScript -->
